--- a/spring-cloud-admin-ui-iview/src/style/application.less
+++ b/spring-cloud-admin-ui-iview/src/style/application.less
@@ -68,31 +68,38 @@
         .body_info{
           display: flex;
           width: 100%;
-          .application_status,.application_group,.application_version{
-            flex: 1;
-            border: 1px solid #e4e7ed;
+          flex-wrap: wrap;
+          .info_item{
+            width: 33.33%;
+            border-left: 1px solid #dcdee2;
+            border-bottom: 1px solid #dcdee2;
             align-items: center;
-            justify-items: center;
-            display: flex;
-            flex-direction: column;
-            span{
-              display: inline-block;
+            position: relative;
+            text-align: center;
+            &:nth-child(3),&:nth-child(6){
+              border-right: 1px solid #dcdee2;
             }
-          }
-          .application_status{
-            border-top-left-radius: 4px;
-            border-bottom-left-radius: 4px;
+            &:nth-child(1),&:nth-child(2),&:nth-child(3){
+              border-top: 1px solid #dcdee2;
+            }
+            &:nth-child(3){
+              border-top-right-radius: 5px;
+            }
+            &:nth-child(4){
+              border-bottom-left-radius: 5px;
+            }
+            &:first-child{
+              border-top-left-radius: 5px;
+            }
+            &:last-child{
+              border-bottom-right-radius: 5px;
+            }
             .up{
               color: #2D8cF0;
             }
-          }
-          .application_version{
-            border-top-right-radius: 4px;
-            border-bottom-right-radius: 4px;
-          }
-          .application_group{
-            border-left: none;
-            border-right: none;
+            span{
+              display: block;
+            }
           }
         }
       }
