--- a/spring-cloud-admin-ui-iview/src/components/main/main.less
+++ b/spring-cloud-admin-ui-iview/src/components/main/main.less
@@ -2,6 +2,7 @@
   .logo-con{
     padding: 12px;
     position: relative;
+    background-color: #4CAF50;
     .logo{
       position: relative;
       display: block;
@@ -12,10 +13,10 @@
       background-size:100% 100%;
       background-position-x: -80px;
       span{
-        color: #4CAF50;
+        color: #fff;
         transition: all 2s;
         line-height: 40px;
-        font-size: 22px;
+        font-size: 18px;
         position: absolute;
         left: 70px;
       }
